--- a/Cpx_Liq_TestDataset_USGS.ipynb
+++ b/Cpx_Liq_TestDataset_USGS.ipynb
@@ -462,6 +462,7 @@
    "outputs": [],
    "source": [
     "# If you love excel, you can copy at this point to your clipboard!\n",
+    "# This wont work in binder\n",
     "Temp_Eq22_Put.to_clipboard(excel=True, index=False)"
    ]
   },
@@ -6147,18 +6148,19 @@
     "fig, axes=plt.subplot_mosaic(mosaic=figure_mosaic, figsize=(8,8))\n",
     "# Plot the calibration dataset of different models\n",
     "axes['A'].plot(Cali_Dataset_Putirka['SiO2_Liq'], Cali_Dataset_Putirka['Na2O_Liq']+Cali_Dataset_Putirka['K2O_Liq'],\n",
-    "         's', mec='grey', mfc='grey', ms=2)\n",
+    "         's', mec='grey', mfc='grey', ms=2, label='P08')\n",
     "axes['A'].plot(Cali_Dataset_Brugman['SiO2_Liq'], Cali_Dataset_Brugman['Na2O_Liq']+Cali_Dataset_Brugman['K2O_Liq'],\n",
-    "         'sk', mfc='cyan')\n",
+    "         'sk', mfc='cyan', label='B19')\n",
     "axes['A'].plot(Cali_Dataset_Wang['SiO2_Liq'], Cali_Dataset_Wang['Na2O_Liq']+Cali_Dataset_Wang['K2O_Liq'],\n",
-    "         'oy', mfc='yellow', ms=3)\n",
+    "         'oy', mfc='yellow', ms=3, label='W21')\n",
     "axes['A'].plot(Cali_Dataset_Neave['SiO2_Liq'], Cali_Dataset_Neave['Na2O_Liq']+Cali_Dataset_Neave['K2O_Liq'],\n",
-    "         'dk', mfc='red')\n",
+    "         'dk', mfc='red', label='N17')\n",
     "axes['A'].plot(Cali_Dataset_Masotta['SiO2_Liq'], Cali_Dataset_Masotta['Na2O_Liq']+Cali_Dataset_Masotta['K2O_Liq'],\n",
-    "          'pb', mfc='None', ms=4, mew=1)\n",
+    "          'pb', mfc='None', ms=4, mew=1, label='M13')\n",
     "axes['A'].set_xlim([35, 80])\n",
     "axes['A'].set_xlabel('SiO$_2$ (wt%)')\n",
     "axes['A'].set_ylabel('Na$_2$O + K$_2$O (wt%)')\n",
+    "axes['A'].legend()\n",
     "\n",
     "###\n",
     "axes['B'].plot(Cali_Dataset_Putirka['Mgno_Cpx'], Cali_Dataset_Putirka['Al2O3_Cpx'],\n",
